--- a/testvuecli3/package.json
+++ b/testvuecli3/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "css-loader": "^2.0.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
