--- a/testvuecli3/package.json
+++ b/testvuecli3/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "css-loader": "^2.0.2",
+    "eslint-plugin-vue": "^7.8.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^7.23.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
